# SigmaGo

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake  gitignore  sigma_go_main  sigma_go_main.cpp
go/: GoBitBlock.cpp  GoBitBlock.h  GoBitBoard.cpp  GoBitBoard.h  GoBitBoardTest.cpp  GoBoard.cpp  GoBoard.h  GoGlobal.h  GoGtpCommandUtil.cpp  GoGtpCommandUtil.h  GoGtpEngine.cpp  GoGtpEngine.h
gtpengine/.deps/: libomegago_gtpengine_a-GtpEngine.Po  libomegago_gtpengine_a-GtpInputStream.Po  libomegago_gtpengine_a-GtpOutputStream.Po
smartgame/.deps/: SgDebug.Po  SgException.Po  SgSystem.Po  SgTime.Po  libomegago_smartgame_a-SgDebug.Po  libomegago_smartgame_a-SgException.Po  libomegago_smartgame_a-SgGtpCommands.Po  libomegago_smartgame_a-SgRandom.Po  libomegago_smartgame_a-SgSystem.Po  libomegago_smartgame_a-SgTime.Po
